Grace/tests/gibbs/errors/t146.grace
// ERROR = P1018
if(false) then {
}
else {
    .
}
